removes scrollbars on textarea to avoid 2 scrollbars and widens modals

--- a/client/angular/css/1_layout.scss
+++ b/client/angular/css/1_layout.scss
@@ -127,6 +127,3 @@
   }
 }
 
-.md-dialog {
-  max-width: 400px;
-}
