--- a/client/angular/css/1_lmo_md.scss
+++ b/client/angular/css/1_lmo_md.scss
@@ -43,7 +43,7 @@
 
 md-dialog {
   overflow: hidden;
-  min-width: $tiny-max-px;
+  min-width: $small-max-px;
   max-width: 800px;
   max-height: 90%;
   @media (max-width: $tiny-max-px) {
@@ -84,11 +84,6 @@ md-virtual-repeat-container {
 }
 
 md-progress-circular { margin: auto; }
-
-md-input-container textarea {
-  max-height: 400px;
-  overflow: auto;
-}
 
 .md-checkbox--with-summary {
   .md-container {
